--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="site-header">
+      <nav class="main-navigation">
+        <a class="site-header-logo">
+          <img src="img/site-header-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+        </a>
+        <span class="search">Поиск по сайту</span>
+        <span class="catalog-navigation">Каталог товаров</span>
+        <ul class="site-navigation">
+          <li class="delivery"><a href="#">Доставка</a></li>
+          <li class="warranty"><a href="#">Гарантия</a></li>
+          <li class="contacts"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="user-menu">
+        <li class="login-link">Войти</li>
+      </ul>
+      <span class="compare">Сравнить</span>
+      <span class="cart">Корзина</span>
+    </header>
   </body>
 </html>
