--- a/index.html
+++ b/index.html
@@ -48,5 +48,30 @@
         <a class="button button-support" href="#">Напишите нам</a>
       </section>
     </main>
+    <footer class="site-footer">
+      <a class="site-footer-logo">
+        <img src="img/site-footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+      </a>
+      <ul class="user-menu">
+        <li class="login-link">Войти</li>
+      </ul>
+      <span class="compare">Сравнить</span>
+      <span class="cart">Корзина</span>
+      <p class="footer-contacts">
+        <span class="address">г. Москва, ул. Строителей, 15</span>
+        <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
+      </p>
+      <ul class="site-navigation">
+        <li class="delivery"><a href="#">Доставка</a></li>
+        <li class="warranty"><a href="#">Гарантия</a></li>
+        <li class="contacts"><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="social-media-list">
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+        <li><a class="social-button" href="#">Твиттер</a></li>
+      </ul>
+      <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+    </footer>
   </body>
 </html>
