--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,70 @@
       <span class="cart">Корзина</span>
     </header>
     <main class="container">
+      <h1>Моноподы для селфи</h1>
 
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Каталог товаров</a></li>
+        <li class="breadcrumbs-current">Моноподы для селфи</li>
+      </ul>
+
+      <section class="filter">
+        <h2>Фильтр:</h2>
+        <!-- Место для формы, которую нужно пропустить по текущему заданию (Задание №3) -->
+      </section>
+
+      <section class="catalog">
+        <h2 class="visually-hidden">Список моноподов для селфи</h2>
+        <!-- Место для меню сортировки, которое нужно пропустить по текущему заданию (Задание №3) -->
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <h3>
+              <a href="#">Любительская селфи-палка</a>
+            </h3>
+            <p class="catalog-item-image">
+              <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            </p>
+            <p class="catalog-item-price">
+              <b>500 руб.</b>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">Профессиональная селфи-палка</a>
+            </h3>
+            <p class="catalog-item-image">
+              <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            </p>
+            <p class="catalog-item-price">
+              <b>1 500 руб.</b>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">Непотопляемая селфи-палка</a>
+            </h3>
+            <p class="catalog-item-image">
+              <img src="img/product-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            </p>
+            <p class="catalog-item-price">
+              <b>2 500 руб.</b>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">Селфи-палка «Следуй за мной»</a>
+            </h3>
+            <p class="catalog-item-image">
+              <img src="img/product-1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            </p>
+            <p class="catalog-item-price">
+              <b>4 900 руб.</b>
+            </p>
+          </li>
+        </ul>
+        <!-- Место для пагинации, которую нужно пропустить по текущему заданию (Задание №3) -->
+      </section>
     </main>
     <footer class="site-footer">
       <a class="site-footer-logo" href="index.html">
