Исправляет "Сравнить" и "Корзина" со спанов на ссылки

--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,8 @@
         <li class="profile-name"><a href="#">Валентин Петухов</a></li>
         <li class="logout-link">Выйти</li>
       </ul>
-      <span class="compare">Сравнить</span>
-      <span class="cart">Корзина</span>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="cart" href="#">Корзина</a>
     </header>
     <main class="container">
       <h1>Моноподы для селфи</h1>
@@ -99,8 +99,8 @@
         <li class="profile-name"><a href="#">Валентин Петухов</a></li>
         <li class="logout-link">Выйти</li>
       </ul>
-      <span class="compare">Сравнить</span>
-      <span class="cart">Корзина</span>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="cart" href="#">Корзина</a>
       <p class="footer-contacts">
         <span class="address">г. Москва, ул. Строителей, 15</span>
         <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
