--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <ul class="user-menu">
         <li class="login-link">Войти</li>
       </ul>
-      <span class="compare">Сравнить</span>
-      <span class="cart">Корзина</span>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="cart" href="#">Корзина</a>
     </header>
     <main class="container">
       <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
@@ -55,8 +55,8 @@
       <ul class="user-menu">
         <li class="login-link">Войти</li>
       </ul>
-      <span class="compare">Сравнить</span>
-      <span class="cart">Корзина</span>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="cart" href="#">Корзина</a>
       <p class="footer-contacts">
         <span class="address">г. Москва, ул. Строителей, 15</span>
         <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
