Исправляет структуру шапки

--- a/catalog.html
+++ b/catalog.html
@@ -6,11 +6,20 @@
   </head>
   <body>
     <header class="site-header">
-      <nav class="main-navigation">
+      <div class="site-menu">
         <a class="site-header-logo" href="index.html">
           <img src="img/site-header-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <span class="search">Поиск по сайту</span>
+        <ul class="user-menu">
+          <li class="profile-name"><a href="#">Валентин Петухов</a></li>
+          <li class="logout-link">Выйти</li>
+        </ul>
+        <a class="compare" href="#">Сравнить</a>
+        <a class="cart" href="#">Корзина</a>
+      </div>
+
+      <nav class="main-navigation">
         <span class="catalog-navigation">Каталог товаров</span>
         <ul class="site-navigation">
           <li class="delivery"><a href="#">Доставка</a></li>
@@ -18,12 +27,6 @@
           <li class="contacts"><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="user-menu">
-        <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-        <li class="logout-link">Выйти</li>
-      </ul>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="cart" href="#">Корзина</a>
     </header>
     <main class="container">
       <h1>Моноподы для селфи</h1>
