--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   </head>
   <body>
     <header class="site-header">
-      <nav class="main-navigation">
+      <div class="site-menu">
         <a class="site-header-logo">
           <img src="img/site-header-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <span class="search">Поиск по сайту</span>
+        <ul class="user-menu">
+          <li class="login-link">Войти</li>
+        </ul>
+        <a class="compare" href="#">Сравнить</a>
+        <a class="cart" href="#">Корзина</a>
+      </div>
+
+      <nav class="main-navigation">
         <span class="catalog-navigation">Каталог товаров</span>
         <ul class="site-navigation">
           <li class="delivery"><a href="#">Доставка</a></li>
@@ -18,11 +26,6 @@
           <li class="contacts"><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="user-menu">
-        <li class="login-link">Войти</li>
-      </ul>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="cart" href="#">Корзина</a>
     </header>
     <main class="container">
       <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
