--- a/catalog.html
+++ b/catalog.html
@@ -13,15 +13,15 @@
         <span class="search">Поиск по сайту</span>
         <ul class="user-menu">
           <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-          <li class="logout-link">Выйти</li>
+          <li class="logout-link"><a href="#">Выйти</a></li>
         </ul>
         <a class="compare" href="#">Сравнить</a>
         <a class="cart" href="#">Корзина</a>
       </div>
 
       <nav class="main-navigation">
-        <span class="catalog-navigation">Каталог товаров</span>
         <ul class="site-navigation">
+          <li class="catalog-navigation"><a href="#">Каталог товаров</a></li>
           <li class="delivery"><a href="#">Доставка</a></li>
           <li class="warranty"><a href="#">Гарантия</a></li>
           <li class="contacts"><a href="#">Контакты</a></li>
@@ -100,7 +100,7 @@
       </a>
       <ul class="user-menu">
         <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-        <li class="logout-link">Выйти</li>
+        <li class="logout-link"><a href="#">Выйти</a></li>
       </ul>
       <a class="compare" href="#">Сравнить</a>
       <a class="cart" href="#">Корзина</a>
