--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         </a>
         <span class="search">Поиск по сайту</span>
         <ul class="user-menu">
-          <li class="login-link">Войти</li>
+          <li class="login-link"><a href="#">Войти</a></li>
         </ul>
         <a class="compare" href="#">Сравнить</a>
         <a class="cart" href="#">Корзина</a>
       </div>
 
       <nav class="main-navigation">
-        <span class="catalog-navigation">Каталог товаров</span>
         <ul class="site-navigation">
+          <li class="catalog-navigation"><a href="#">Каталог товаров</a></li>
           <li class="delivery"><a href="#">Доставка</a></li>
           <li class="warranty"><a href="#">Гарантия</a></li>
           <li class="contacts"><a href="#">Контакты</a></li>
@@ -56,7 +56,7 @@
         <img src="img/site-footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
       </a>
       <ul class="user-menu">
-        <li class="login-link">Войти</li>
+        <li class="login-link"><a href="#">Войти</a></li>
       </ul>
       <a class="compare" href="#">Сравнить</a>
       <a class="cart" href="#">Корзина</a>
