Подключает контентные изображения в разметку главной и каталога

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="site-header">
       <div class="site-menu">
         <a class="site-header-logo" href="index.html">
-          <img src="img/site-header-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <span class="search">Поиск по сайту</span>
         <ul class="user-menu">
@@ -51,7 +51,7 @@
               <a href="#">Любительская селфи-палка</a>
             </h3>
             <p class="catalog-item-image">
-              <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+              <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             </p>
             <p class="catalog-item-price">
               <b>500 руб.</b>
@@ -62,7 +62,7 @@
               <a href="#">Профессиональная селфи-палка</a>
             </h3>
             <p class="catalog-item-image">
-              <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+              <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </p>
             <p class="catalog-item-price">
               <b>1 500 руб.</b>
@@ -73,7 +73,7 @@
               <a href="#">Непотопляемая селфи-палка</a>
             </h3>
             <p class="catalog-item-image">
-              <img src="img/product-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+              <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </p>
             <p class="catalog-item-price">
               <b>2 500 руб.</b>
@@ -84,7 +84,7 @@
               <a href="#">Селфи-палка «Следуй за мной»</a>
             </h3>
             <p class="catalog-item-image">
-              <img src="img/product-1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+              <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             </p>
             <p class="catalog-item-price">
               <b>4 900 руб.</b>
@@ -96,7 +96,7 @@
     </main>
     <footer class="site-footer">
       <a class="site-footer-logo" href="index.html">
-        <img src="img/site-footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
       </a>
       <ul class="user-menu">
         <li class="profile-name"><a href="#">Валентин Петухов</a></li>
