--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="site-header">
       <div class="site-menu">
         <a class="site-header-logo">
-          <img src="img/site-header-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <span class="search">Поиск по сайту</span>
         <ul class="user-menu">
@@ -53,7 +53,7 @@
     </main>
     <footer class="site-footer">
       <a class="site-footer-logo">
-        <img src="img/site-footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
       </a>
       <ul class="user-menu">
         <li class="login-link"><a href="#">Войти</a></li>
