Добавляет action для формы поиска
Это конечно всё равно заглушка, но зато теперь можно тестировать

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
         <a class="site-header-logo" href="index.html">
           <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
-        <form class="search-form" action="#" method="get">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="visually-hidden" for="search-field">Поиск по сайту</label>
           <input class="search" id="search-field" type="search" name="q" placeholder="Поиск по сайту">
         </form>
