--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
         </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-          <input class="search" id="search-field" type="search" name="q" placeholder="Поиск по сайту">
+          <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
         </form>
         <ul class="user-menu">
           <li class="profile-name"><a href="#">Валентин Петухов</a></li>
