Добавляет кнопку закрытия формы

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
         <button class="button" type="submit">Отправить</button>
       </form>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
 </html>
