--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Карта проезда в наш офис"></a>
+        <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
         <a class="button button-support" href="#">Напишите нам</a>
       </section>
     </main>
@@ -106,6 +106,12 @@
         </div>
         <button class="button" type="submit">Отправить</button>
       </form>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
+
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Карта проезда в офис</h2>
+      <a href="#"><img src="img/contacts-map-big.jpg" width="960" height="559" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
