Исправляет ошибку: у "textarea" не может быть аттрибута "value"

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="support-message-container">
           <label for="support-message">Текст письма:</label>
-          <textarea id="support-message" name="message" value="" placeholder="В свободной форме"></textarea>
+          <textarea id="support-message" name="message" placeholder="В свободной форме"></textarea>
         </div>
         <button class="button" type="submit">Отправить</button>
       </form>
