--- a/catalog.html
+++ b/catalog.html
@@ -43,11 +43,11 @@
     <main class="container">
       <h1>Моноподы для селфи</h1>
 
-      <ul class="breadcrumbs">
+      <ol class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Каталог товаров</a></li>
         <li class="breadcrumbs-current">Моноподы для селфи</li>
-      </ul>
+      </ol>
 
       <section class="filter">
         <h2>Фильтр:</h2>
