Добавляет структурные правки в шапку
Вытащил лого из дива "меню сайта".
Обернул список, который должен быть в попапе в див.

--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <header class="site-header">
+      <a class="site-header-logo" href="index.html">
+        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+      </a>
+
       <div class="site-menu">
-        <a class="site-header-logo" href="index.html">
-          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-        </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="visually-hidden" for="search-field">Поиск по сайту</label>
           <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
@@ -33,14 +34,16 @@
         </ul>
       </nav>
 
-      <ul class="popup-categories">
-        <li><a href="#">Виртуальная реальность</a></li>
-        <li><a href="#">Моноподы для селфи</a></li>
-        <li><a href="#">Экшн-камеры</a></li>
-        <li><a href="#">Фитнес-браслеты</a></li>
-        <li><a href="#">Умные часы</a></li>
-        <li><a href="#">Квадрокоптеры</a></li>
-      </ul>
+      <div class="popup-categories">
+        <ul>
+          <li><a href="#">Виртуальная реальность</a></li>
+          <li><a href="#">Моноподы для селфи</a></li>
+          <li><a href="#">Экшн-камеры</a></li>
+          <li><a href="#">Фитнес-браслеты</a></li>
+          <li><a href="#">Умные часы</a></li>
+          <li><a href="#">Квадрокоптеры</a></li>
+        </ul>
+      </div>
     </header>
     <main class="container">
       <h1>Моноподы для селфи</h1>
