Добавляет в подвал разделение на блоки

--- a/catalog.html
+++ b/catalog.html
@@ -152,30 +152,36 @@
       </section>
     </main>
     <footer class="site-footer">
-      <a class="site-footer-logo" href="index.html">
-        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-      </a>
-      <ul class="user-menu">
-        <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-        <li class="logout-link"><a href="#">Выйти</a></li>
-      </ul>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="cart" href="#">Корзина</a>
-      <p class="footer-contacts">
-        <span class="address">г. Москва, ул. Строителей, 15</span>
-        <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
-      </p>
-      <ul class="site-navigation">
-        <li class="delivery"><a href="#">Доставка</a></li>
-        <li class="warranty"><a href="#">Гарантия</a></li>
-        <li class="contacts"><a href="#">Контакты</a></li>
-      </ul>
-      <ul class="social-media-list">
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
-        <li><a class="social-button" href="#">Твиттер</a></li>
-      </ul>
-      <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+      <div class="footer-top">
+        <a class="site-footer-logo" href="index.html">
+          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+        </a>
+        <ul class="user-menu">
+          <li class="profile-name"><a href="#">Валентин Петухов</a></li>
+          <li class="logout-link"><a href="#">Выйти</a></li>
+        </ul>
+        <a class="compare" href="#">Сравнить</a>
+        <a class="cart" href="#">Корзина</a>
+      </div>
+      <div class="footer-middle">
+        <p class="footer-contacts">
+          <span class="address">г. Москва, ул. Строителей, 15</span>
+          <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
+        </p>
+        <ul class="site-navigation">
+          <li class="delivery"><a href="#">Доставка</a></li>
+          <li class="warranty"><a href="#">Гарантия</a></li>
+          <li class="contacts"><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <ul class="social-media-list">
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+        </ul>
+        <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+      </div>
     </footer>
   </body>
 </html>
