--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="site-header">
       <a class="site-header-logo" href="index.html">
         <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
@@ -58,23 +58,23 @@
             <legend>Цвет</legend>
             <ul>
               <li class="filter-option">
-                <input class="filter-input-checkbox" id="filter-black" type="checkbox" name="black" checked>
+                <input class="filter-input filter-input-checkbox" id="filter-black" type="checkbox" name="black" checked>
                 <label for="filter-black">Черный</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input-checkbox" id="filter-white" type="checkbox" name="white">
+                <input class="filter-input filter-input-checkbox" id="filter-white" type="checkbox" name="white">
                 <label for="filter-white">Белый</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input-checkbox" id="filter-blue" type="checkbox" name="blue" checked>
+                <input class="filter-input filter-input-checkbox" id="filter-blue" type="checkbox" name="blue" checked>
                 <label for="filter-blue">Синий</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input-checkbox" id="filter-red" type="checkbox" name="red" checked>
+                <input class="filter-input filter-input-checkbox" id="filter-red" type="checkbox" name="red" checked>
                 <label for="filter-red">Красный</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input-checkbox" id="filter-pink" type="checkbox" name="pink">
+                <input class="filter-input filter-input-checkbox" id="filter-pink" type="checkbox" name="pink">
                 <label for="filter-pink">Розовый</label>
               </li>
             </ul>
@@ -83,11 +83,11 @@
             <legend>Bluetooth</legend>
             <ul>
               <li class="filter-option">
-                <input class="filter-input-radio" id="filter-blueetooth-yes" type="radio" name="bluetooth" value="yes" checked>
+                <input class="filter-input filter-input-radio" id="filter-blueetooth-yes" type="radio" name="bluetooth" value="yes" checked>
                 <label for="filter-blueetooth-yes">Есть</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input-radio" id="filter-bluetooth-no" type="radio" name="bluetooth" value="no">
+                <input class="filter-input filter-input-radio" id="filter-bluetooth-no" type="radio" name="bluetooth" value="no">
                 <label for="filter-bluetooth-no">Нет</label>
               </li>
             </ul>
