Подгоняет выпадающее меню и добавляет "наезжание" боди на шапку на главной странице

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="index-page">
     <header class="site-header layout-positioner">
       <div class="layout-header">
         <a class="site-header-logo">
