Добавляет ссылку на каталог в хлебных крошках

--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
         <div class="layout-catalog-main-positioner">
           <ol class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Каталог товаров</a></li>
+            <li><a href="catalog.html">Каталог товаров</a></li>
             <li class="breadcrumbs-current">Моноподы для селфи</li>
           </ol>
         </div>
